--- a/docs/notes/Intro/Intro to Stat.tex
+++ b/docs/notes/Intro/Intro to Stat.tex
@@ -68,9 +68,9 @@
 \frame{
 \frametitle{Weekly Schedule}
     \begin{itemize}
-        \item<1-7> Week 1: R Introduction and Statistical Principles
-        \item<3-6> Week 2: Testing Mean Differences and Associations
-        \item<4-6> Week 3: Statistical Models for Multivariate Analysis
+        \item Week 1: R Introduction and Statistical Principles
+        \item<2-> Week 2: Testing Mean Differences and Associations
+        \item<3-> Week 3: Statistical Models for Multivariate Analysis
     \end{itemize}
 }
 
