--- a/docs/rcode/week3/PracticeWeek3.Rmd
+++ b/docs/rcode/week3/PracticeWeek3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Practice Questions: Multivariate Regression Models"
+title: "Week 3 In-class Practice"
 author: "Ruoqing Zhu"
 date: "Last Updated: `r format(Sys.time(), '%B %d, %Y')`"
 output:
@@ -33,7 +33,7 @@ output:
 ```
 
 
-2. Read Table 1 in [Tosepu et al. (2020)](papers/Tosepu2020.pdf). Which variable is considered significantly correlated with the COVID19 cases count? What type of correlation is used in this paper? And why?
+2. Read Table 1 in [Tosepu et al. (2020)](https://teazrq.github.io/Stat-PopHealth/papers/Tosepu2020.pdf). Which variable is considered significantly correlated with the COVID19 cases count? What type of correlation is used in this paper? And why? What could be potential issues that make the conclusion invalid?
 
 ## Simple Linear Regression 
 
@@ -49,7 +49,7 @@ output:
   
   2. Based on your understanding of a simple linear regression, is this model a good fitting? 
   
-  3. Read Table 2 in [Goodings et al. (2011)](papers/Gooding2011.pdf), what is the p-value associated with food insecure when modeling BMI in females using a simple linear regression? 
+  3. Read Table 2 in [Goodings et al. (2011)](https://teazrq.github.io/Stat-PopHealth/papers/Gooding2011.pdf), what is the p-value associated with food insecure when modeling BMI in females using a simple linear regression? 
 
 
 ## Multiple Linear Regression 
@@ -82,7 +82,7 @@ output:
 
   4. Can you think of examples in which not including a confounding variable would cause a misleading result? 
 
-  5. Read Table 2 in [Goodings et al. (2011)](papers/Gooding2011.pdf) and contrasting Model 2 and Model 3. What could be the cause that the category `Multiethnic` parameter estimate changed quite significantly?
+  5. Read Table 2 in [Goodings et al. (2011)](https://teazrq.github.io/Stat-PopHealth/papers/Gooding2011.pdf) and contrasting Model 2 and Model 3. What could be the cause that the category `Multiethnic` parameter estimate changed quite significantly?
 
 
 
